fix: solve foundation 06 flex layout problem

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -1,8 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-body {
-  height: 100vh;
+*,
+*::before,
+*::after {
+  padding: 0;
   margin: 0;
+  box-sizing: border-box;
+}
+
+/* * {border: 1px solid red;} */
+
+body {
+  width: 100%;
+  height: 100vh;
   overflow: hidden;
   font-family: Roboto, sans-serif;
 }
@@ -16,6 +26,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
@@ -23,4 +34,43 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+a {
+  color: #666;
+  text-decoration: none;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  display: flex;
+  padding: 16px;
+  justify-content: space-between;
+}
+
+.left-links,
+.right-links {
+  list-style: none;
+  display: flex;
+  gap: 16px;
+}
+
+.content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+}
+
+.footer {
+  background-color: #eee;
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
 }
